[metadata]
name = dhl-express
version = 0.2
description = A Python library for interacting with DHL Express API
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Cuznetov
author_email = danielcuznetov04@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
url = https://github.com/DCDie/dhl-express
project_urls =
    Bug Tracker = https://github.com/DCDie/dhl-express/issues
[options]
python_requires = >=3.8
install_requires =
    requests>=2.28.1
packages = find:

